k8s/anomaly-simulator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anomaly-simulator
  namespace: basestation-platform
  labels:
    app: anomaly-simulator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: anomaly-simulator
  template:
    metadata:
      labels:
        app: anomaly-simulator
    spec:
      containers:
        - name: anomaly-simulator
          image: anomaly-simulator:latest
          imagePullPolicy: Never
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
